--- a/index.html
+++ b/index.html
@@ -3,226 +3,208 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flight Search</title>
+  <title>Flight to Z – Search Flights</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-white text-slate-900">
 
-  <!-- Search -->
-  <section id="search" class="py-8 bg-white shadow">
-    <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
-      <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
-      <form id="searchForm" class="grid md:grid-cols-2 gap-4">
-        <!-- From -->
-        <input id="from" list="airports" placeholder="From (e.g. DEL)" class="px-4 py-3 rounded-lg border"/>
-        <!-- To -->
-        <input id="to" list="airports" placeholder="To (e.g. YYZ)" class="px-4 py-3 rounded-lg border"/>
-        <!-- Dates -->
-        <input type="date" id="depDate" class="px-4 py-3 rounded-lg border"/>
-        <input type="date" id="retDate" class="px-4 py-3 rounded-lg border"/>
-        <!-- Cabin -->
-        <select id="cabin" class="px-4 py-3 rounded-lg border">
-          <option>Economy</option>
-          <option>Business</option>
-          <option>First</option>
-        </select>
-        <!-- Passengers -->
-        <input type="number" min="1" value="1" id="pax" class="px-4 py-3 rounded-lg border"/>
-        <!-- Submit -->
-        <button type="submit" class="md:col-span-2 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg">Show Deals</button>
-      </form>
+<!-- Search -->
+<section id="search" class="py-16 bg-white">
+  <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
+    <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
+    <form id="flightForm" class="grid md:grid-cols-2 gap-4">
+      <!-- From -->
+      <input list="airports" id="from" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
+      <!-- To -->
+      <input list="airports" id="to" placeholder="To (e.g. YYZ – Toronto)" class="px-4 py-3 rounded-lg border"/>
+      <!-- Dates -->
+      <input type="date" id="depart" class="px-4 py-3 rounded-lg border"/>
+      <input type="date" id="return" class="px-4 py-3 rounded-lg border"/>
+      <!-- Cabin -->
+      <select id="cabin" class="px-4 py-3 rounded-lg border">
+        <option>Economy</option>
+        <option>Business</option>
+        <option>First</option>
+      </select>
+      <!-- Passengers -->
+      <input type="number" min="1" value="1" id="pax" class="px-4 py-3 rounded-lg border"/>
+      <!-- Submit -->
+      <button type="submit" class="md:col-span-2 bg-brand-600 hover:bg-brand-700 bg-blue-600 text-white py-3 rounded-lg">Show Deals</button>
+    </form>
 
-      <!-- Airport codes -->
-      <datalist id="airports">
-        <!-- India -->
-        <option value="DEL">New Delhi</option>
-        <option value="BOM">Mumbai</option>
-        <option value="BLR">Bengaluru</option>
-        <option value="MAA">Chennai</option>
-        <option value="CCU">Kolkata</option>
-        <!-- Canada -->
-        <option value="YYZ">Toronto</option>
-        <option value="YVR">Vancouver</option>
-        <option value="YUL">Montreal</option>
-        <option value="YYC">Calgary</option>
-        <option value="YEG">Edmonton</option>
-        <!-- USA -->
-        <option value="JFK">New York</option>
-        <option value="EWR">New Jersey</option>
-        <option value="LAX">Los Angeles</option>
-        <option value="ORD">Chicago</option>
-        <option value="DFW">Dallas</option>
-        <option value="SFO">San Francisco</option>
-        <option value="MIA">Miami</option>
-        <option value="BOS">Boston</option>
-      </datalist>
-    </div>
-  </section>
-
-  <!-- Filters -->
-  <div class="max-w-3xl mx-auto mt-6 bg-slate-50 p-4 rounded-lg shadow">
-    <h3 class="font-bold mb-2">Filter Results</h3>
-    <div class="flex flex-wrap gap-4">
-      <!-- Non-stop -->
-      <label class="flex items-center gap-2">
-        <input type="checkbox" id="filterNonStop"> Non-stop only
-      </label>
-      <!-- Airline -->
-      <label>
-        Airline:
-        <select id="filterAirline" class="px-2 py-1 border rounded">
-          <option value="">All</option>
-        </select>
-      </label>
-      <!-- Region -->
-      <label>
-        Region:
-        <select id="filterRegion" class="px-2 py-1 border rounded">
-          <option value="">All</option>
-          <option value="Canada">Canada</option>
-          <option value="USA">USA</option>
-          <option value="India">India</option>
-        </select>
-      </label>
-      <!-- Price -->
-      <label>
-        Max Price (CAD):
-        <input type="number" id="filterPrice" placeholder="e.g. 800" class="px-2 py-1 border rounded w-24">
-      </label>
-    </div>
+    <!-- Airport codes -->
+    <datalist id="airports">
+      <!-- India -->
+      <option value="DEL – New Delhi (Indira Gandhi Intl)">
+      <option value="BOM – Mumbai (Chhatrapati Shivaji)">
+      <option value="BLR – Bengaluru (Kempegowda Intl)">
+      <option value="MAA – Chennai (Chennai Intl)">
+      <option value="CCU – Kolkata (Netaji Subhas Chandra Bose)">
+      <!-- Canada -->
+      <option value="YYZ – Toronto (Pearson Intl)">
+      <option value="YVR – Vancouver (Vancouver Intl)">
+      <option value="YUL – Montreal (Trudeau Intl)">
+      <option value="YYC – Calgary (Calgary Intl)">
+      <option value="YEG – Edmonton (Edmonton Intl)">
+      <!-- USA -->
+      <option value="JFK – New York (John F. Kennedy Intl)">
+      <option value="EWR – New Jersey (Newark Intl)">
+      <option value="LAX – Los Angeles (LAX Intl)">
+      <option value="ORD – Chicago (O’Hare Intl)">
+      <option value="DFW – Dallas (Fort Worth Intl)">
+      <option value="SFO – San Francisco (SFO Intl)">
+      <option value="MIA – Miami (Miami Intl)">
+      <option value="BOS – Boston (Logan Intl)">
+    </datalist>
+    <p class="text-xs text-slate-500 mt-2">*Live API booking coming soon.</p>
   </div>
+</section>
 
-  <!-- Sorting -->
-  <div class="max-w-3xl mx-auto mt-4 flex gap-2">
-    <button onclick="sortFlights('price')" class="bg-gray-200 px-4 py-2 rounded">Sort by Price</button>
-    <button onclick="sortFlights('duration')" class="bg-gray-200 px-4 py-2 rounded">Sort by Duration</button>
-    <button onclick="sortFlights('departure')" class="bg-gray-200 px-4 py-2 rounded">Sort by Departure</button>
+<!-- Filters -->
+<div class="max-w-3xl mx-auto mt-6 bg-slate-50 p-4 rounded-lg shadow">
+  <h3 class="font-bold mb-2">Filter Results</h3>
+  <div class="flex flex-wrap gap-4">
+    <label class="flex items-center gap-2">
+      <input type="checkbox" id="filterNonStop"> Non-stop only
+    </label>
+    <label>
+      Airline:
+      <select id="filterAirline" class="px-2 py-1 border rounded">
+        <option value="">All</option>
+      </select>
+    </label>
+    <label>
+      Region:
+      <select id="filterRegion" class="px-2 py-1 border rounded">
+        <option value="">All</option>
+        <option value="Canada">Canada</option>
+        <option value="USA">USA</option>
+        <option value="India">India</option>
+      </select>
+    </label>
+    <label>
+      Max Price (CAD):
+      <input type="number" id="filterPrice" placeholder="e.g. 800" class="px-2 py-1 border rounded w-24">
+    </label>
   </div>
+</div>
 
-  <!-- Results -->
-  <div id="results" class="max-w-3xl mx-auto mt-6"></div>
+<!-- Results -->
+<section id="results" class="py-12">
+  <div class="max-w-3xl mx-auto">
+    <h3 class="text-xl font-bold mb-4">Available Flights</h3>
+    <div class="mb-4">
+      Sort by:
+      <select id="sortBy" class="px-2 py-1 border rounded">
+        <option value="price">Cheapest</option>
+        <option value="time">Earliest Departure</option>
+      </select>
+    </div>
+    <div id="flightResults" class="space-y-4"></div>
+  </div>
+</section>
 
-  <script>
-    let flights = [];
+<script>
+const apiKey = "8ef20815e927059544227d49b0c127f1";
 
-    // Demo airlines
-    const airlines = ["Air India", "IndiGo", "Air Canada", "Delta", "United", "American Airlines"];
+// Example airlines list
+const airlines = ["Air India","Air Canada","United Airlines","Delta","American Airlines"];
 
-    // Generate random flights
-    function generateFlights() {
-      flights = [];
-      for (let i = 0; i < 8; i++) {
-        const fromList = ["DEL","BOM","YYZ","YVR","JFK","SFO"];
-        const toList = ["YYZ","YVR","DEL","BOM","JFK","SFO"];
-        const from = fromList[Math.floor(Math.random()*fromList.length)];
-        const to = toList[Math.floor(Math.random()*toList.length)];
-        const airline = airlines[Math.floor(Math.random()*airlines.length)];
-        const priceCAD = Math.floor(Math.random()*500 + 400);
-        flights.push({
-          airline,
-          flight: "AI-" + Math.floor(Math.random()*900+100),
-          from, to,
-          dep: "2025-09-01T0"+Math.floor(Math.random()*9)+":00",
-          arr: "2025-09-01T1"+Math.floor(Math.random()*9)+":00",
-          duration: Math.floor(Math.random()*400 + 100),
-          priceCAD,
-          priceUSD: Math.floor(priceCAD*0.74),
-          priceINR: Math.floor(priceCAD*62),
-          status: "On Time"
-        });
-      }
-      renderFlights(flights);
-    }
+const airportsByRegion = {
+  Canada: ["YYZ","YVR","YUL","YYC","YEG"],
+  USA: ["JFK","EWR","LAX","ORD","DFW","SFO","MIA","BOS"],
+  India: ["DEL","BOM","BLR","MAA","CCU"]
+};
 
-    // Render
-    function renderFlights(list) {
-      let html = "";
-      if (list.length === 0) {
-        html = "<p>No flights match your filters.</p>";
-      } else {
-        // Fill airline filter
-        const airlineSet = [...new Set(flights.map(f => f.airline))];
-        const airlineDropdown = document.getElementById("filterAirline");
-        if (airlineDropdown.options.length === 1) {
-          airlineSet.forEach(a => {
-            airlineDropdown.innerHTML += `<option value="${a}">${a}</option>`;
-          });
-        }
-
-        list.forEach(f => {
-          const details =
-            `Airline: ${f.airline}\nFlight: ${f.flight}\nFrom: ${f.from}\nTo: ${f.to}\nDeparture: ${f.dep}\nPrice: ${f.priceCAD} CAD | ${f.priceUSD} USD | ₹${f.priceINR} INR`;
-          const whatsappLink = `https://wa.me/917009767211?text=${encodeURIComponent("Hi, I want to book this flight:\n" + details)}`;
-          const emailLink = `mailto:sales@flighttoz.com?subject=Flight Booking Request&body=${encodeURIComponent(details)}`;
-          html += `
-            <div class="p-4 border rounded-lg bg-white shadow mb-4">
-              <p><strong>Airline:</strong> ${f.airline}</p>
-              <p><strong>Flight:</strong> ${f.flight}</p>
-              <p><strong>From:</strong> ${f.from}</p>
-              <p><strong>To:</strong> ${f.to}</p>
-              <p><strong>Departure:</strong> ${f.dep}</p>
-              <p><strong>Status:</strong> ${f.status}</p>
-              <hr class="my-2">
-              <p><strong>Price:</strong> ${f.priceCAD} CAD | ${f.priceUSD} USD | ₹${f.priceINR} INR</p>
-              <p><strong>Duration:</strong> ${f.duration} mins</p>
-              <div class="flex gap-2 mt-3">
-                <a href="${whatsappLink}" target="_blank" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg">📲 WhatsApp</a>
-                <a href="${emailLink}" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg">📧 Email</a>
-              </div>
-            </div>`;
-        });
-      }
-      document.getElementById("results").innerHTML = html;
-    }
-
-    // Sorting
-    function sortFlights(type) {
-      let sorted = [...flights];
-      if (type === "price") sorted.sort((a,b) => a.priceCAD - b.priceCAD);
-      if (type === "duration") sorted.sort((a,b) => a.duration - b.duration);
-      if (type === "departure") sorted.sort((a,b) => new Date(a.dep) - new Date(b.dep));
-      renderFlights(sorted);
-    }
-
-    // Filters
-    function applyFilters() {
-      let filtered = [...flights];
-
-      if (document.getElementById("filterNonStop").checked) {
-        filtered = filtered.filter(f => f.duration < 300);
-      }
-      const airline = document.getElementById("filterAirline").value;
-      if (airline) filtered = filtered.filter(f => f.airline === airline);
-
-      const region = document.getElementById("filterRegion").value;
-      if (region) {
-        const canada = ["YYZ","YVR","YUL","YYC","YEG"];
-        const usa = ["JFK","EWR","LAX","ORD","DFW","SFO","MIA","BOS"];
-        const india = ["DEL","BOM","BLR","MAA","CCU"];
-        filtered = filtered.filter(f => {
-          if (region === "Canada") return canada.includes(f.from) || canada.includes(f.to);
-          if (region === "USA") return usa.includes(f.from) || usa.includes(f.to);
-          if (region === "India") return india.includes(f.from) || india.includes(f.to);
-        });
-      }
-
-      const maxPrice = document.getElementById("filterPrice").value;
-      if (maxPrice) filtered = filtered.filter(f => f.priceCAD <= maxPrice);
-
-      renderFlights(filtered);
-    }
-
-    // Event listeners
-    document.getElementById("filterNonStop").addEventListener("change", applyFilters);
-    document.getElementById("filterAirline").addEventListener("change", applyFilters);
-    document.getElementById("filterRegion").addEventListener("change", applyFilters);
-    document.getElementById("filterPrice").addEventListener("input", applyFilters);
-
-    // Form submit
-    document.getElementById("searchForm").addEventListener("submit", e => {
-      e.preventDefault();
-      generateFlights();
+// Random flight generator
+function generateFlights(from,to) {
+  let flights = [];
+  for (let i=0;i<5;i++) {
+    const airline = airlines[Math.floor(Math.random()*airlines.length)];
+    const nonStop = Math.random() > 0.5;
+    const depHour = Math.floor(Math.random()*24);
+    const priceCAD = Math.floor(400 + Math.random()*800);
+    const priceUSD = (priceCAD*0.74).toFixed(2);
+    const priceINR = (priceCAD*61).toFixed(0);
+    flights.push({
+      from,to,airline,nonStop,depHour,priceCAD,priceUSD,priceINR
     });
-  </script>
+  }
+  return flights;
+}
+
+// Display flights
+function showFlights(list) {
+  const container = document.getElementById("flightResults");
+  container.innerHTML = "";
+  list.forEach(f=>{
+    const div = document.createElement("div");
+    div.className="p-4 bg-white border rounded shadow";
+    div.innerHTML = `
+      <div class="flex justify-between items-center">
+        <div>
+          <p class="font-bold">${f.from} → ${f.to}</p>
+          <p class="text-sm text-slate-600">${f.airline} • ${f.nonStop?"Non-stop":"1 Stop"} • ${f.depHour}:00</p>
+        </div>
+        <div class="text-right">
+          <p class="font-bold">${f.priceCAD} CAD</p>
+          <p class="text-sm text-slate-600">${f.priceUSD} USD • ${f.priceINR} INR</p>
+          <div class="mt-2 flex gap-2">
+            <a href="https://wa.me/917009767211?text=I%20want%20to%20book%20${f.from}%20to%20${f.to}%20at%20${f.priceCAD}CAD" target="_blank" class="px-3 py-1 bg-green-600 text-white rounded">WhatsApp</a>
+            <a href="mailto:sales@flighttoz.com?subject=Booking%20Request&body=I%20want%20to%20book%20${f.from}%20to%20${f.to}%20at%20${f.priceCAD}CAD" class="px-3 py-1 bg-blue-600 text-white rounded">Email</a>
+          </div>
+        </div>
+      </div>`;
+    container.appendChild(div);
+  });
+}
+
+// Handle search
+document.getElementById("flightForm").addEventListener("submit",e=>{
+  e.preventDefault();
+  const from=document.getElementById("from").value.split("–")[0].trim();
+  const to=document.getElementById("to").value.split("–")[0].trim();
+  let flights=generateFlights(from,to);
+
+  // fill airline filter
+  const select=document.getElementById("filterAirline");
+  select.innerHTML='<option value="">All</option>';
+  [...new Set(flights.map(f=>f.airline))].forEach(a=>{
+    const opt=document.createElement("option"); opt.value=a; opt.textContent=a; select.appendChild(opt);
+  });
+
+  window.allFlights=flights;
+  applyFilters();
+});
+
+// Apply filters + sorting
+function applyFilters(){
+  let filtered=[...window.allFlights];
+  if(document.getElementById("filterNonStop").checked){
+    filtered=filtered.filter(f=>f.nonStop);
+  }
+  const airline=document.getElementById("filterAirline").value;
+  if(airline) filtered=filtered.filter(f=>f.airline===airline);
+  const region=document.getElementById("filterRegion").value;
+  if(region){
+    filtered=filtered.filter(f=>
+      airportsByRegion[region].includes(f.from)||airportsByRegion[region].includes(f.to)
+    );
+  }
+  const maxPrice=parseInt(document.getElementById("filterPrice").value);
+  if(maxPrice) filtered=filtered.filter(f=>f.priceCAD<=maxPrice);
+
+  const sort=document.getElementById("sortBy").value;
+  if(sort==="price") filtered.sort((a,b)=>a.priceCAD-b.priceCAD);
+  if(sort==="time") filtered.sort((a,b)=>a.depHour-b.depHour);
+
+  showFlights(filtered);
+}
+
+document.querySelectorAll("#filterNonStop,#filterAirline,#filterRegion,#filterPrice,#sortBy").forEach(el=>{
+  el.addEventListener("input",applyFilters);
+});
+</script>
+
 </body>
 </html>
