--- a/index.html
+++ b/index.html
@@ -1,28 +1,63 @@
-<!-- Search -->
-<section id="search" class="py-16 bg-white">
-  <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
-    <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
-    <form class="grid md:grid-cols-2 gap-4">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flight to Z – Best Deals Canada ⇄ India ⇄ USA</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Animations */
+    .fade-in { animation: fadeIn 1.5s ease-in-out; }
+    .slide-up { animation: slideUp 0.8s ease-in-out; }
+    @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
+    @keyframes slideUp { from {transform:translateY(40px);opacity:0;} to {transform:translateY(0);opacity:1;} }
+    .btn-anim { transition: transform 0.2s, box-shadow 0.2s; }
+    .btn-anim:hover { transform: scale(1.05); box-shadow: 0px 4px 10px rgba(0,0,0,0.2); }
+  </style>
+</head>
+<body class="bg-white text-slate-900">
+
+<!-- Header -->
+<header class="fixed top-0 left-0 w-full bg-blue-700 text-white shadow z-50">
+  <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
+    <!-- Logo + Name -->
+    <div class="flex items-center gap-3">
+      <img src="logo.png" alt="Flight to Z Logo" class="h-10 w-10 object-contain">
+      <h1 class="text-xl font-bold">Flight to Z</h1>
+    </div>
+    <!-- Contact -->
+    <div class="text-sm text-right">
+      <p>📞 +91 70097 67211</p>
+      <p>📧 sales@flighttoz.com</p>
+    </div>
+  </div>
+</header>
+
+<!-- Hero Section -->
+<section class="h-[80vh] bg-cover bg-center flex items-center justify-center fade-in" style="background-image: url('https://images.unsplash.com/photo-1504196606672-aef5c9cefc92?auto=format&fit=crop&w=1600&q=80');">
+  <div class="bg-white/90 p-8 rounded-2xl shadow-xl max-w-2xl w-full slide-up">
+    <h2 class="text-3xl font-bold text-center mb-6 text-blue-700">Search Your Flight</h2>
+    <form id="flightForm" class="grid md:grid-cols-2 gap-4">
       <!-- From -->
-      <input list="airports" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
+      <input list="airports" id="from" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
       <!-- To -->
-      <input list="airports" placeholder="To (e.g. BOM – Mumbai)" class="px-4 py-3 rounded-lg border"/>
+      <input list="airports" id="to" placeholder="To (e.g. YYZ – Toronto)" class="px-4 py-3 rounded-lg border"/>
       <!-- Dates -->
-      <input type="date" class="px-4 py-3 rounded-lg border"/>
-      <input type="date" class="px-4 py-3 rounded-lg border"/>
+      <input type="date" id="depart" class="px-4 py-3 rounded-lg border"/>
+      <input type="date" id="return" class="px-4 py-3 rounded-lg border"/>
       <!-- Cabin -->
-      <select class="px-4 py-3 rounded-lg border">
+      <select id="cabin" class="px-4 py-3 rounded-lg border">
         <option>Economy</option>
         <option>Business</option>
         <option>First</option>
       </select>
       <!-- Passengers -->
-      <input type="number" min="1" value="1" class="px-4 py-3 rounded-lg border"/>
+      <input type="number" min="1" value="1" id="pax" class="px-4 py-3 rounded-lg border"/>
       <!-- Submit -->
-      <button type="submit" class="md:col-span-2 bg-brand-600 hover:bg-brand-700 text-white py-3 rounded-lg">Show Deals</button>
+      <button type="submit" class="md:col-span-2 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg btn-anim">Show Deals</button>
     </form>
 
-    <!-- Airport codes for autocomplete -->
+    <!-- Airport codes -->
     <datalist id="airports">
       <!-- India -->
       <option value="DEL – New Delhi (Indira Gandhi Intl)">
@@ -46,7 +81,54 @@
       <option value="MIA – Miami (Miami Intl)">
       <option value="BOS – Boston (Logan Intl)">
     </datalist>
-
-    <p class="text-xs text-slate-500 mt-2">*Live API booking coming soon.</p>
   </div>
 </section>
+
+<!-- Results -->
+<section id="results" class="max-w-5xl mx-auto py-16 px-4 hidden">
+  <h2 class="text-2xl font-bold mb-6">Available Flights</h2>
+  <div id="flightsList" class="grid gap-6"></div>
+</section>
+
+<script>
+document.getElementById("flightForm").addEventListener("submit", function(e) {
+  e.preventDefault();
+  const results = document.getElementById("results");
+  const flightsList = document.getElementById("flightsList");
+  flightsList.innerHTML = "";
+
+  // Show results section
+  results.classList.remove("hidden");
+
+  // Generate random flights
+  const airlines = ["Air India", "Air Canada", "Delta", "United Airlines", "IndiGo"];
+  const from = document.getElementById("from").value || "DEL";
+  const to = document.getElementById("to").value || "YYZ";
+
+  for (let i = 0; i < 3; i++) {
+    let cad = Math.floor(Math.random() * (1500 - 600) + 600);
+    let usd = (cad * 0.75).toFixed(0);
+    let inr = (cad * 62).toFixed(0);
+    let airline = airlines[Math.floor(Math.random() * airlines.length)];
+
+    let card = document.createElement("div");
+    card.className = "p-6 bg-white rounded-xl shadow-md slide-up";
+    card.innerHTML = `
+      <h3 class="text-xl font-semibold text-blue-700 mb-2">${airline}</h3>
+      <p class="mb-1">From: <strong>${from}</strong> → To: <strong>${to}</strong></p>
+      <p class="mb-3">Class: Economy | Non-stop</p>
+      <div class="text-lg font-bold mb-4">
+        💵 CAD ${cad} | 💲 USD ${usd} | ₹ INR ${inr}
+      </div>
+      <div class="flex gap-3">
+        <a href="https://wa.me/917009767211?text=I%20want%20to%20book%20${from}%20to%20${to}%20flight%20with%20${airline}" target="_blank" class="flex-1 bg-green-600 text-white py-2 rounded-lg text-center btn-anim">WhatsApp</a>
+        <a href="mailto:sales@flighttoz.com?subject=Flight%20Booking&body=I%20want%20to%20book%20${from}%20to%20${to}%20flight%20with%20${airline}" class="flex-1 bg-blue-600 text-white py-2 rounded-lg text-center btn-anim">Email</a>
+      </div>
+    `;
+    flightsList.appendChild(card);
+  }
+});
+</script>
+
+</body>
+</html>
