--- a/index.html
+++ b/index.html
@@ -1,134 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flight to Z – Best Deals Canada ⇄ India ⇄ USA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Flight to Z – Canada ⇄ India ⇄ USA | Best Flight Deals</title>
+  <meta name="description" content="Flight to Z — Find the best flight deals between Canada, India, and USA. Real agents, fast support, great prices." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Animations */
-    .fade-in { animation: fadeIn 1.5s ease-in-out; }
-    .slide-up { animation: slideUp 0.8s ease-in-out; }
-    @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
-    @keyframes slideUp { from {transform:translateY(40px);opacity:0;} to {transform:translateY(0);opacity:1;} }
-    .btn-anim { transition: transform 0.2s, box-shadow 0.2s; }
-    .btn-anim:hover { transform: scale(1.05); box-shadow: 0px 4px 10px rgba(0,0,0,0.2); }
+    :root { --brand:#1e40af; --brand2:#0ea5e9; }
+    * { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif; }
+    /* Simple reveal animations */
+    .reveal { opacity: 0; transform: translateY(24px); transition: all .7s ease; }
+    .reveal.show { opacity: 1; transform: translateY(0); }
+    /* Buttons micro-interactions */
+    .btn-anim { transition: transform .18s ease, box-shadow .18s ease; }
+    .btn-anim:hover { transform: translateY(-2px); box-shadow: 0 10px 22px rgba(0,0,0,.15); }
+    /* Hero airplane animation */
+    .plane-wrap { position: absolute; inset: 0; pointer-events: none; overflow: hidden; }
+    .plane {
+      position: absolute; top: 18%; left: -180px;
+      width: 160px; opacity:.9; filter: drop-shadow(0 12px 18px rgba(0,0,0,.25));
+      animation: fly 14s linear infinite;
+    }
+    @keyframes fly {
+      0% { transform: translateX(0) translateY(0) rotate(0deg); opacity: 0; }
+      8% { opacity: 1; }
+      50% { transform: translateX(60vw) translateY(-15px) rotate(1deg); }
+      100% { transform: translateX(110vw) translateY(0) rotate(0deg); opacity: .2; }
+    }
+    /* Card hover */
+    .card { transition: transform .18s ease, box-shadow .18s ease; }
+    .card:hover { transform: translateY(-3px); box-shadow: 0 18px 36px rgba(2,6,23,.12); }
+    /* Smooth anchor scroll */
+    html { scroll-behavior: smooth; }
   </style>
 </head>
 <body class="bg-white text-slate-900">
 
-<!-- Header -->
-<header class="fixed top-0 left-0 w-full bg-blue-700 text-white shadow z-50">
-  <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
-    <!-- Logo + Name -->
-    <div class="flex items-center gap-3">
-      <img src="logo.png" alt="Flight to Z Logo" class="h-10 w-10 object-contain">
-      <h1 class="text-xl font-bold">Flight to Z</h1>
-    </div>
-    <!-- Contact -->
-    <div class="text-sm text-right">
-      <p>📞 +91 70097 67211</p>
-      <p>📧 sales@flighttoz.com</p>
-    </div>
-  </div>
-</header>
-
-<!-- Hero Section -->
-<section class="h-[80vh] bg-cover bg-center flex items-center justify-center fade-in" style="background-image: url('https://images.unsplash.com/photo-1504196606672-aef5c9cefc92?auto=format&fit=crop&w=1600&q=80');">
-  <div class="bg-white/90 p-8 rounded-2xl shadow-xl max-w-2xl w-full slide-up">
-    <h2 class="text-3xl font-bold text-center mb-6 text-blue-700">Search Your Flight</h2>
-    <form id="flightForm" class="grid md:grid-cols-2 gap-4">
-      <!-- From -->
-      <input list="airports" id="from" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
-      <!-- To -->
-      <input list="airports" id="to" placeholder="To (e.g. YYZ – Toronto)" class="px-4 py-3 rounded-lg border"/>
-      <!-- Dates -->
-      <input type="date" id="depart" class="px-4 py-3 rounded-lg border"/>
-      <input type="date" id="return" class="px-4 py-3 rounded-lg border"/>
-      <!-- Cabin -->
-      <select id="cabin" class="px-4 py-3 rounded-lg border">
-        <option>Economy</option>
-        <option>Business</option>
-        <option>First</option>
-      </select>
-      <!-- Passengers -->
-      <input type="number" min="1" value="1" id="pax" class="px-4 py-3 rounded-lg border"/>
-      <!-- Submit -->
-      <button type="submit" class="md:col-span-2 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg btn-anim">Show Deals</button>
-    </form>
-
-    <!-- Airport codes -->
-    <datalist id="airports">
-      <!-- India -->
-      <option value="DEL – New Delhi (Indira Gandhi Intl)">
-      <option value="BOM – Mumbai (Chhatrapati Shivaji)">
-      <option value="BLR – Bengaluru (Kempegowda Intl)">
-      <option value="MAA – Chennai (Chennai Intl)">
-      <option value="CCU – Kolkata (Netaji Subhas Chandra Bose)">
-      <!-- Canada -->
-      <option value="YYZ – Toronto (Pearson Intl)">
-      <option value="YVR – Vancouver (Vancouver Intl)">
-      <option value="YUL – Montreal (Trudeau Intl)">
-      <option value="YYC – Calgary (Calgary Intl)">
-      <option value="YEG – Edmonton (Edmonton Intl)">
-      <!-- USA -->
-      <option value="JFK – New York (John F. Kennedy Intl)">
-      <option value="EWR – New Jersey (Newark Intl)">
-      <option value="LAX – Los Angeles (LAX Intl)">
-      <option value="ORD – Chicago (O’Hare Intl)">
-      <option value="DFW – Dallas (Fort Worth Intl)">
-      <option value="SFO – San Francisco (SFO Intl)">
-      <option value="MIA – Miami (Miami Intl)">
-      <option value="BOS – Boston (Logan Intl)">
-    </datalist>
-  </div>
-</section>
-
-<!-- Results -->
-<section id="results" class="max-w-5xl mx-auto py-16 px-4 hidden">
-  <h2 class="text-2xl font-bold mb-6">Available Flights</h2>
-  <div id="flightsList" class="grid gap-6"></div>
-</section>
-
-<script>
-document.getElementById("flightForm").addEventListener("submit", function(e) {
-  e.preventDefault();
-  const results = document.getElementById("results");
-  const flightsList = document.getElementById("flightsList");
-  flightsList.innerHTML = "";
-
-  // Show results section
-  results.classList.remove("hidden");
-
-  // Generate random flights
-  const airlines = ["Air India", "Air Canada", "Delta", "United Airlines", "IndiGo"];
-  const from = document.getElementById("from").value || "DEL";
-  const to = document.getElementById("to").value || "YYZ";
-
-  for (let i = 0; i < 3; i++) {
-    let cad = Math.floor(Math.random() * (1500 - 600) + 600);
-    let usd = (cad * 0.75).toFixed(0);
-    let inr = (cad * 62).toFixed(0);
-    let airline = airlines[Math.floor(Math.random() * airlines.length)];
-
-    let card = document.createElement("div");
-    card.className = "p-6 bg-white rounded-xl shadow-md slide-up";
-    card.innerHTML = `
-      <h3 class="text-xl font-semibold text-blue-700 mb-2">${airline}</h3>
-      <p class="mb-1">From: <strong>${from}</strong> → To: <strong>${to}</strong></p>
-      <p class="mb-3">Class: Economy | Non-stop</p>
-      <div class="text-lg font-bold mb-4">
-        💵 CAD ${cad} | 💲 USD ${usd} | ₹ INR ${inr}
+  <!-- Header -->
+  <header class="fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur border-b">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <img src="logo.png" alt="Flight to Z logo" class="h-10 w-10 object-contain" />
+        <a href="#home" class="text-lg sm:text-xl font-extrabold text-slate-800">Flight to Z</a>
       </div>
-      <div class="flex gap-3">
-        <a href="https://wa.me/917009767211?text=I%20want%20to%20book%20${from}%20to%20${to}%20flight%20with%20${airline}" target="_blank" class="flex-1 bg-green-600 text-white py-2 rounded-lg text-center btn-anim">WhatsApp</a>
-        <a href="mailto:sales@flighttoz.com?subject=Flight%20Booking&body=I%20want%20to%20book%20${from}%20to%20${to}%20flight%20with%20${airline}" class="flex-1 bg-blue-600 text-white py-2 rounded-lg text-center btn-anim">Email</a>
+      <nav class="hidden md:flex items-center gap-6 text-sm">
+        <a href="#search" class="hover:text-blue-700">Search</a>
+        <a href="#services" class="hover:text-blue-700">Services</a>
+        <a href="#about" class="hover:text-blue-700">About</a>
+        <a href="#reviews" class="hover:text-blue-700">Reviews</a>
+        <a href="#contact" class="hover:text-blue-700">Contact</a>
+      </nav>
+      <div class="text-right text-xs sm:text-sm leading-4">
+        <p class="font-semibold">📞 +91 70097 67211</p>
+        <p class="text-slate-600">sales@flighttoz.com</p>
       </div>
-    `;
-    flightsList.appendChild(card);
-  }
-});
-</script>
+    </div>
+  </header>
 
-</body>
-</html>
+  <!-- Hero -->
+  <section id="home" class="relative pt-24">
+    <div class="absolute inset-0 bg-gradient-to-b from-sky-100 via-white to-white -z-10"></div>
+    <div class="plane-wrap">
+      <!-- simple plane svg -->
+      <svg class="plane" viewBox="0 0 512 512" aria-hidden="true">
+        <path fill="currentColor" d="M476 192c-6-8-18-12-36-12-56 0-170 38-236 64L96 208 32 224l112 48-112 48 64 16 108-36c66 26 180 64 236 64 18 0 30-4 36-12 8-10 8-26 0-36-4-6-12-10-24-14 12-4 20-8 24-14 8-10 8-26 0-36-4-6-12-10-24-14 12-4 20-8 24-14 8-10 8-26 0-36z" />
+      </svg>
+    </div>
+
+    <div class="max-w-7xl mx-auto px-4 grid lg:grid-cols-2 gap-10 items-center">
+      <div class="reveal">
+        <h1 class="text-3xl sm:text-5xl font-extrabold tracking-tight text-slate-900">
+          Best Deals: <span class="text-blue-700">Canada ⇄ India ⇄ USA</span>
+        </h1>
+        <p class="mt-4 text-slate-600 max-w-xl">
+          Real agents. Honest prices. 24/7 support. Search flights and contact us to lock in deals today.
+        </p>
+        <div class="mt-6 flex gap-3">
+          <a href="#search" class="btn-anim bg-blue-600 hover:bg-blue-700 text-white px-5 py-3 rounded-lg text-sm font-semibold">Find Flights</a>
+          <a href="#contact" class="btn-anim bg-white border px-5 py-3 rounded-lg text-sm font-semibold">Talk to an agent</a>
+        </div>
+      </div>
+
+      <!-- Search Card -->
+      <div id="search" class="reveal">
+        <div class="bg-white/95 border rounded-2xl shadow-xl p-6">
+          <h2 class="text-xl font-bold mb-4">Search Flights</h2>
+          <form id="flightForm" class="grid sm:grid-cols-2 gap-4">
+            <input list="airports" id="from" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border">
+            <input list="airports" id="to" placeholder="To (e.g. YYZ – Toronto)" class="px-4 py-3 rounded-lg border">
+            <input type="date" id="depart" class="px-4 py-3 rounded-lg border">
+            <input type="date" id="return" class="px-4 py-3 rounded-lg border">
+            <select id="cabin" class="px-4 py-3 rounded-lg border">
+              <option>Economy</option><option>Business</option><option>First</option>
+            </select>
+            <input type="number" min="1" value="1" id="pax" class="px-4 py-3 rounded-lg border" placeholder="Passengers">
+            <button type="submit" class="sm:col-span-2 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg btn-anim">Show Deals</button>
+          </form>
+
+          <!-- Airports datalist -->
+          <datalist id="airports">
+            <!-- India -->
+            <option value="DEL – New Delhi (Indira Gandhi Intl)">
+            <option value="BOM – Mumbai (Chhatrapati Shivaji)">
+            <option value="BLR – Bengaluru (Kempegowda Intl)">
+            <option value="MAA – Chennai (Chennai Intl)">
+            <option value="CCU – Kolkata (Netaji Subhas Chandra Bose)">
+            <!-- Canada -->
+            <option value="YYZ – Toronto (Pearson Intl)">
+            <option value="YVR – Vancouver (Vancouver Intl)">
+            <option value="YUL – Montreal (Trudeau Intl)">
+            <option value="YYC – Calgary (Calgary Intl)">
+            <option value="YEG – Edmonton (Edmonton Intl)">
+            <!-- USA -->
+            <option value="JFK – New York (John F. Kennedy Intl)">
+            <option value="EWR – New Jersey (Newark Intl)">
+            <option value="LAX – Los Angeles (LAX Intl)">
+            <option value="ORD – Chicago (O’Hare Intl)">
+            <option value="DFW – Dallas (Fort Worth Intl)">
+            <option value="SFO – San Francisco (SFO Intl)">
+            <option value="MIA – Miami (Miami Intl)">
+            <option value="BOS – Boston (Logan Intl)">
+          </datalist>
+          <p class="text-xs text-slate-500 mt-2">*Prices shown are demo estimates for presentation. Contact us for today’s best fare.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Results -->
+  <section id="results" class="reveal max-w-7xl mx-auto px-4 py-16 hidden">
+    <div class="flex items-end justify-between mb-6">
+      <h3 class="text-2xl font-bold">Available Flights</h3>
+      <div>
+        <label for="sortBy" class="mr-2 text-sm text-slate-600">Sort by:</label>
+        <select id="sortBy" class="px-3 py-2 border rounded-lg text-sm">
+          <option value="price">Cheapest</option>
+          <option value="time">Earliest Departure</option>
+          <option value="duration">Fastest</option>
+        </select>
+      </div>
+    </div>
+    <div id="flightsList" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="reveal max-w-7xl mx-auto px-4 py-16">
+    <h3 class="text-2xl font-bold mb-8">Our Services</h3>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="card p-6 border rounded-2xl">
+        <div class="text-3xl mb-3">🛫</div>
+        <h4 class="font-bold mb-2">Flight Ticketing</h4>
+        <p class="text-slate-600 text-sm">International & domestic tickets at competitive prices with transparent fees.</p>
+      </div>
+      <div class="card p-6 border rounded-2xl">
+        <div class="text-3xl mb-3">💼</div>
+        <h4 class="font-bold mb-2">Business Travel</h4>
+        <p class="text-slate-600 text-sm">Flexible fares, invoice support, and priority options for corporate travelers.</p>
+      </div>
+      <div class="card p-6 border rounded-2xl">
+        <div class="text-3xl mb-3">🎯</div>
+        <h4 class="font-bold mb-2">Best-Deal Hunt</h4>
+        <p class
